# iot-platform-modern-data-stack-poc

./: .dockerignore  .gitignore  .sample-env  Dockerfile  README.md  docker-compose.yml  pyproject.toml
db/: datahack.duckdb
prefect_deploy/: extract_file_flow-docker-deployment.yaml  init_db_flow-docker-deployment.yaml  load_data_flow-docker-deployment.yaml
src/api/: data.py  main.py  test.py
src/data/metadata/: gauge-data-20231205t183704.csv  rainfall-and-stream-heights-metadata-20230917t110000.csv  rainfall-and-stream-heights-metadata-20231205t110000.csv
src/data/seeds/: new-file-2023-10-05-17:11:16.632489.csv  new-file-2023-10-05-18:07:58.391447.csv  new-file-2023-10-05-18:19:48.793286.csv  new-file-2023-10-05-18:51:44.711355.csv  new-file-2023-10-05-19:05:55.767864.csv  new-file-2023-10-05-19:48:59.239027.csv  new-file-2023-10-05-20:05:57.132002.csv  new-file-2023-10-05-20:52:03.668056.csv  new-file-2023-10-05-21:35:17.955718.csv  new-file-2023-10-05-22:26:38.699548.csv  new-file-2023-10-05-22:36:00.357618.csv  new-file-2023-10-05-22:50:54.395626.csv  new-file-2023-10-05-23:06:00.764353.csv  new-file-2023-10-05_17:06:13.820600.csv  new-file-2023-10-10-19:02:26.150635.csv  new-file-2023-10-10-19:15:39.563734.csv  new-file-2023-10-10-19:30:33.734274.csv  new-file-2023-10-10-19:45:31.936433.csv  new-file-2023-10-10-20:00:33.518306.csv  new-file-2023-10-10-23:02:58.761291.csv  new-file-2023-10-10-23:15:14.439670.csv  (+43 more)
src/flows/: db.py  deploy.sh  extract_flow.py  init_flow.py  load_flow.py  transform_flow.py
src/web/: weatherboard_app.py
(+1 files in other folders)
